--- a/OneHotEncoding.ipynb
+++ b/OneHotEncoding.ipynb
@@ -36,7 +36,7 @@
         "outputId": "87307a10-1d29-4ada-cb2c-7f4e3394aa47"
       },
       "source": [
-        "#Convert Using TensorFlow\n",
+        "#Convert to one hot encoding Using TensorFlow\n",
         "\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
